--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="Y6hmpc9KlSQyva_8xxMid9ljMTzAX2Ad41FE9Hz1NzE" />
     <title>Pop-Song Translator</title>
   </head>
   <body>
