temporary close webiste for changing AI

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,17 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5370161941078385"
-     crossorigin="anonymous"></script>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google-site-verification" content="Y6hmpc9KlSQyva_8xxMid9ljMTzAX2Ad41FE9Hz1NzE" />
-    <title>Pop-Song Translator</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <div id="tooltip-root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Site Under Maintenance (지금 점검 중)</title>
+  <style>
+    body {
+      background-color: #f5f5f5;
+      font-family: sans-serif;
+      text-align: center;
+      padding-top: 20%;
+    }
+    h1 {
+      color: #333;
+    }
+  </style>
+</head>
+<body>
+  <h1>🚧 We'll be back soon! 금방 올게요! 파파고 AI로 번역 API 바꾸는중.</h1>
+  <p>We're performing some maintenance. Please check back later.</p>
+</body>
 </html>
