--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,8 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="Y6hmpc9KlSQyva_8xxMid9ljMTzAX2Ad41FE9Hz1NzE" />
-    <title>Pop-Song Translator</title>
+    <meta name="description" content="Translate English pop lyrics to Korean line-by-line. Sync with YouTube and understand lyrics with ease. 영어-한국어 팝송 번역기 입니다.">
+    <title>Pop Song Translator - Translate English Lyrics to Korean</title>
   </head>
   <body>
     <div id="root"></div>
